add first section-checklist

--- a/src/index.html
+++ b/src/index.html
@@ -65,10 +65,26 @@
 				<ul class="list__checkbox">
 					<li class="list__checkbox__item">
 						<label class="custom-check">
+							<input type="checkbox" name="check-B" class="custom-check__checkbox check-B">
+							<span data-ripple="false" class="custom-check__checkbox check-B__background"></span>
+							<span class="custom-check__checkbox check-B__checkbox"></span>
+							<span class="custom-check__text">Referral Accepted and Invited invitations not sorted by A-Z</span>
+						</label>
+					</li>
+					<li class="list__checkbox__item">
+						<label class="custom-check">
 							<input type="checkbox" checked="true" name="check-B" class="custom-check__checkbox check-B">
 							<span data-ripple="false" class="custom-check__checkbox check-B__background"></span>
 							<span class="custom-check__checkbox check-B__checkbox"></span>
-							<span class="custom-check__text">Item 1</span>
+							<span class="custom-check__text">Inbox shows me 242 items - that includes Done items; Only show me active</span>
+						</label>
+					</li>
+					<li class="list__checkbox__item">
+						<label class="custom-check">
+							<input type="checkbox" checked="true" name="check-B" class="custom-check__checkbox check-B">
+							<span data-ripple="false" class="custom-check__checkbox check-B__background"></span>
+							<span class="custom-check__checkbox check-B__checkbox"></span>
+							<span class="custom-check__text">Inbox defaults to show done items - it should not</span>
 						</label>
 					</li>
 					<li class="list__checkbox__item">
@@ -76,7 +92,7 @@
 							<input type="checkbox" name="check-B" class="custom-check__checkbox check-B">
 							<span data-ripple="false" class="custom-check__checkbox check-B__background"></span>
 							<span class="custom-check__checkbox check-B__checkbox"></span>
-							<span class="custom-check__text">Item 1</span>
+							<span class="custom-check__text">Lists default to Show Done - they should not</span>
 						</label>
 					</li>
 					<li class="list__checkbox__item">
@@ -84,11 +100,26 @@
 							<input type="checkbox" name="check-B" class="custom-check__checkbox check-B">
 							<span data-ripple="false" class="custom-check__checkbox check-B__background"></span>
 							<span class="custom-check__checkbox check-B__checkbox"></span>
-							<span class="custom-check__text">Item 1</span>
+							<span class="custom-check__text">Recent view should sort by Created and show no Done items</span>
 						</label>
 					</li>
 				</ul>
-
+				<div class="mark__top"></div>
+				<div class="time">2h ago</div>
+				<div class="share">
+					<ul class="share__list">
+						<li class="share__list__item">
+							<a href="" class="share__list__item__link">
+								<i class="share__icons share__icon"></i>
+							</a>
+						</li>
+						<li class="share__list__item">
+							<a href="" class="share__list__item__link">
+								<i class="share__icons url__icon"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</div>
 	</main>
