--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,9 @@
 						<li class="share__list__item">
 							<a href="" class="share__list__item__link">
 								<i class="share__icons url__icon"></i>
+								<div class="tooltip">
+									<span>http://cll.io/a6lnu</span>
+								</div>
 							</a>
 						</li>
 					</ul>
@@ -153,6 +156,9 @@
 						<li class="share__list__item">
 							<a href="" class="share__list__item__link">
 								<i class="share__icons url__icon"></i>
+								<div class="tooltip">
+									<span>http://cll.io/a6lnu</span>
+								</div>
 							</a>
 						</li>
 					</ul>
@@ -185,6 +191,9 @@
 						<li class="share__list__item">
 							<a href="" class="share__list__item__link">
 								<i class="share__icons url__icon"></i>
+								<div class="tooltip">
+									<span>http://cll.io/a6lnu</span>
+								</div>
 							</a>
 						</li>
 					</ul>
@@ -260,6 +269,9 @@
 						<li class="share__list__item">
 							<a href="" class="share__list__item__link">
 								<i class="share__icons url__icon"></i>
+								<div class="tooltip">
+									<span>http://cll.io/a6lnu</span>
+								</div>
 							</a>
 						</li>
 					</ul>
