add adaptation  mobile device

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 			<div class="header__popup__left">
 				<div class="centrallo">Centrallo</div>
 				<div class="message">Download it for free on the App Store</div>
+				<div class="message__mobile">Free on the Google Play</div>
 			</div>
 			<div class="header__popup__right">
 				<button type="button" name="button" class="popup__download">Download</button>
