add modularity, photo user, var color

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 			<div class="authorized">
 				<div class="user">
 					<div class="user__picture">
-						<img src="http://lorempixel.com/400/200/" class="user__picture__img" alt="user">
+						<img src="img/items/user/user.jpg" class="user__picture__img" alt="user">
 					</div>
 					<div class="user__name">
 						Konstantin Vladimirskiy
@@ -85,7 +85,7 @@
 			<div class="social__media">
 				<div class="user">
 					<div class="user__picture">
-						<img src="http://lorempixel.com/400/200/" class="user__picture__img" alt="user">
+						<img src="img/items/user/user.jpg" class="user__picture__img" alt="user">
 					</div>
 					<div class="user__name">
 						Konstantin Vladimirskiy
